--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,18 @@
-baseURL = "http://example.org/"
+baseURL = "http://divman.me/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Divyansh's Blog"
 theme = "ananke"
+
+[params]
+  favicon = ""
+  site_logo = ""
+  description = "The last theme you'll ever need. Maybe."
+  facebook = "https://facebook.com/divyanshm"
+  twitter = "https://twitter.com/divyanshm7"
+  github = "https://github.com/divyanshm"
+  linkedin = "https://www.linkedin.com/in/divyanshm/"
+  stackoverflow = ""
+  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+  recent_posts_number = 2
