--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://divman.me/"
+baseURL = "http://www.divman.me/"
 languageCode = "en-us"
 title = "Divyansh's Blog"
 theme = "ananke"
